--- a/ObjectTrackers.csproj
+++ b/ObjectTrackers.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
+		<TargetFrameworks>net5.0;net6.0</TargetFrameworks>
+		<ImplicitUsings>disable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<Version>1.0.16</Version>
+		<Version>1.0.17</Version>
 		<Authors>Ryan A. Kueter</Authors>
 		<Company>Ryan A. Kueter</Company>
 		<Description>A free .NET library that provides a simple way to track changes made to an object, like a class or list of classes. It allows you to capture those changes as “before” and “after” json serialized dictionary arrays that contain the property names and their values for quickly and easily storing and retrieving your audit data.</Description>
@@ -13,10 +13,10 @@
 		<PackageIcon>Icon.jpg</PackageIcon>
 		<PackageIconUrl />
 		<RepositoryUrl>https://github.com/ryankueter/ObjectTrackers</RepositoryUrl>
-		<PackageReleaseNotes>Improved thread safety and updated it to .NET 6.</PackageReleaseNotes>
+		<PackageReleaseNotes>Readded .NET 5 support.</PackageReleaseNotes>
 		<PackageTags>C#;Track;Tracking;Changes;Auditing</PackageTags>
-		<AssemblyVersion>1.0.16</AssemblyVersion>
-		<FileVersion>1.0.16</FileVersion>
+		<AssemblyVersion>1.0.17</AssemblyVersion>
+		<FileVersion>1.0.17</FileVersion>
 		<Copyright>Ryan A. Kueter</Copyright>
 		<PackageProjectUrl>https://github.com/ryankueter/ObjectTrackers</PackageProjectUrl>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
@@ -24,13 +24,6 @@
 		<Product>$(AssemblyName)</Product>
 		<NeutralLanguage>en</NeutralLanguage>
 	</PropertyGroup>
-
-	<ItemGroup>
-		<Using Include="System.Reflection" />
-		<Using Include="System.Text.Json" />
-		<Using Include="System.Text.Json.Serialization" />
-		<Using Include="System.Collections.Concurrent" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<None Include="Icon.jpg">
